Fix Safari iOS (scroll direction jumping, auto-zoom for text < 16px), up scroll button for each overlay, better version display

--- a/html/styles.css
+++ b/html/styles.css
@@ -27,6 +27,10 @@
     h3 {
         @apply text-primary font-bold;
     }
+
+    input {
+        @apply text-[16px];
+    }
 }
 
 @layer components {
